Fix bug: carousel width makes page too wide
- overflow-x: clip on carousel container fixes bug

--- a/css/application.css
+++ b/css/application.css
@@ -395,6 +395,7 @@ a:hover {
 .logo-carousel-horizontal-centering-container {
   display: flex;
   justify-content: center;
+  overflow-x: clip;
 }
 
 .logo-carousel-flex-parent-container {
